opencti/opencti.yml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: opencti
  labels:
    app.kubernetes.io/name: redis
    app.kubernetes.io/instance: redis
spec:
  selector:
    app.kubernetes.io/name: redis
  ports:
    - port: 6379
      protocol: TCP

---
apiVersion: v1
kind: Service
metadata:
  name: opencti-platform
  namespace: opencti
  labels:
    app.kubernetes.io/name: opencti-platform
    app.kubernetes.io/instance: opencti-platform
spec:
  selector:
    app.kubernetes.io/name: opencti-platform
  ports:
    - port: 8080
      protocol: TCP

---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
  namespace: opencti
  labels:
    app.kubernetes.io/name: rabbitmq
    app.kubernetes.io/instance: rabbitmq
spec:
  selector:
    app.kubernetes.io/name: rabbitmq
  ports:
    - name: amqp
      port: 5672
      protocol: TCP
    - name: management
      port: 15672
      protocol: TCP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: opencti
  labels:
    app.kubernetes.io/name: redis
    app.kubernetes.io/instance: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: redis
      app.kubernetes.io/instance: redis
  template:
    metadata:
      labels:
        app.kubernetes.io/name: redis
        app.kubernetes.io/instance: redis
    spec:
      containers:
        - name: redis
          imagePullPolicy: Always
          image: redis:6.2.6
          resources:
            limits:
              memory: "256Mi"
          ports:
            - name: resp
              containerPort: 6379

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq
  namespace: opencti
  labels:
    app.kubernetes.io/name: rabbitmq
    app.kubernetes.io/instance: rabbitmq
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: rabbitmq
      app.kubernetes.io/instance: rabbitmq
  template:
    metadata:
      labels:
        app.kubernetes.io/name: rabbitmq
        app.kubernetes.io/instance: rabbitmq
    spec:
      containers:
        - name: rabbitmq
          imagePullPolicy: Always
          image: rabbitmq:3.9-management
          resources:
            limits:
              memory: "256Mi"
          ports:
            - name: amqp
              containerPort: 5672
            - name: management
              containerPort: 15672

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: opencti-platform
  namespace: opencti
  labels:
    app.kubernetes.io/name: opencti-platform
    app.kubernetes.io/instance: opencti-platform
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: opencti-platform
      app.kubernetes.io/instance: opencti-platform
  template:
    metadata:
      labels:
        app.kubernetes.io/name: opencti-platform
        app.kubernetes.io/instance: opencti-platform
    spec:
      containers:
        - name: opencti-platform
          imagePullPolicy: Always
          image: opencti/platform:5.1.3
          resources:
            limits:
              memory: "2Gi"
              cpu: "1"
          ports:
            - name: http
              containerPort: 8080

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: opencti-export-file-stix
  namespace: opencti
  labels:
    app.kubernetes.io/name: opencti-export-file-stix
    app.kubernetes.io/instance: opencti-export-file-stix
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: opencti-export-file-stix
      app.kubernetes.io/instance: opencti-export-file-stix
  template:
    metadata:
      labels:
        app.kubernetes.io/name: opencti-export-file-stix
        app.kubernetes.io/instance: opencti-export-file-stix
    spec:
      containers:
        - name: opencti-export-file-stix
          imagePullPolicy: Always
          image:  opencti/connector-export-file-stix:5.1.3
          resources:
            limits:
              memory: "500Mi"
            requests:
              memory: 100Mi
              cpu: 10m
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: opencti-import-file-stix
  namespace: opencti
  labels:
    app.kubernetes.io/name: opencti-import-file-stix
    app.kubernetes.io/instance: opencti-import-file-stix
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: opencti-import-file-stix
      app.kubernetes.io/instance: opencti-import-file-stix
  template:
    metadata:
      labels:
        app.kubernetes.io/name: opencti-import-file-stix
        app.kubernetes.io/instance: opencti-import-file-stix
    spec:
      containers:
        - name: opencti-import-file-stix
          imagePullPolicy: Always
          image:  opencti/connector-export-file-stix:5.1.3
          resources:
            limits:
              memory: "500Mi"
            requests:
              memory: 100Mi
              cpu: 10m
