opencti/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: opencti
  namespace: opencti
spec:
  ingressClassName: nginx
  rules:
    - host: cti.lan.repe.re
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: opencti-platform
                port:
                  number: 8080
